--- a/tests/RBTree/CMakeLists.txt
+++ b/tests/RBTree/CMakeLists.txt
@@ -3,13 +3,13 @@ function(create_dummy_test SOURCE_NAME)
     add_executable(${TARGET_NAME})
     target_sources(${TARGET_NAME} PRIVATE "src/${SOURCE_NAME}" #[[ "src/IsCorrectRBT.cpp" ]])
     target_include_directories(${TARGET_NAME} PRIVATE include)
-    target_link_libraries(${TARGET_NAME} PRIVATE RBTree GTest::gtest_main)
+    target_link_libraries(${TARGET_NAME} PRIVATE RBTree gtest gtest_main)
     gtest_discover_tests(${TARGET_NAME})
 endfunction()
 
 #Rotate_test.cpp
 #DeleteFixuper_test.cpp IsCorrectRBT_test.cpp Delete_test.cpp)
-set(TEST_FILES InsertFixuper_test.cpp Insert_test.cpp HelpMethods_test.cpp Rotate_test.cpp Iterator_test.cpp)
+set(TEST_FILES InsertFixuper_test.cpp Insert_test.cpp HelpMethods_test.cpp Rotate_test.cpp Iterator_test.cpp TestRBTree_test.cpp)
 foreach(TEST_FILE ${TEST_FILES})
     create_dummy_test(${TEST_FILE})
 endforeach()
